@@ -1,3 +1,10 @@
+2008-05-28  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* Makefile.am:
+	Ensure we generate UNIXProcess.java in the
+	source directory, as in the OpenJDK build itself.
+	* Makefile.in: Regenerated.
+
 2008-05-27  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* patches/icedtea-signed-types.patch:
